Release 0.0.7
- Add PDF::Function::PostScript.calc method. For
  evaluating Postscript functions
Release 0.0.6
- Fix PDF::Page.Annots accessor. Now coerces fields to PDF::Field
Release 0.0.5
- Set up accessor aliases, e.g. D(dash) in PDF::Appearance
Release 0.0.4
- Add etc/make-quick-ref.pl use it to generate table of classes in README.md
Release 0.0.3
- Correct attribute name: Bound -> Bounds in PDF::Function::Stitching
Release 0.0.2
- Fix syntax of PDF::Content::XObject['PS'] and PDF::Font::Type3
Release 0.0.1
- initial release