@@ -1,6 +1,7 @@
 Release 0.0.7
-- Add PDF::Function::PostScript.calc method. For
-  evaluating Postscript functions
+Add PDF function calculator methods:
+- Add PDF::Function::PostScript.calc
+- Add PDF::Function::Sampled.calc
 Release 0.0.6
 - Fix PDF::Page.Annots accessor. Now coerces fields to PDF::Field
 Release 0.0.5
